--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -52,9 +52,6 @@
                         src="https://www.youtube.com/embed/@youtubeId?modestbranding=1&showinfo=0&rel=0&enablejsapi=1@{if(host != "") s"&origin=$host" else ""}"
                         frameborder="0"
                         allowfullscreen=""></iframe>
-                        <div class="hosted__youtube-poster-image" style="background-image: url(@page.video.posterUrl);">
-                            <div class="hosted__youtube-play-button"></div>
-                        </div>
                     }.getOrElse {
                         <video
                         data-duration="@{page.video.duration}"
@@ -70,6 +67,11 @@
                             <source type="video/ogg" src="@{page.video.srcUrlOgg}">
                             <source type="video/m3u8" src="@{page.video.srcM3u8}">
                         </video>
+                    }
+                    @if(page.video.youtubeId.isDefined && !Option(page.video.posterUrl).getOrElse("").isEmpty){
+                        <div class="hosted__youtube-poster-image" style="background-image: url(@page.video.posterUrl);">
+                            <div class="hosted__youtube-play-button"></div>
+                        </div>
                     }
                     <div class="hosted-fading js-hosted-fading">
                         <div class="hosted__video-overlay"></div>
