--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -64,10 +64,9 @@
                         data-block-video-ads="true"
                         poster="@{page.video.posterUrl}"
                         class="vjs-hosted__video hosted__video gu-media--video vjs vjs-paused vjs-controls-enabled vjs_video_1-dimensions vjs-user-active">
-                            <source type="video/mp4" src="@{page.video.srcUrlMp4}">
-                            <source type="video/webm" src="@{page.video.srcUrlWebm}">
-                            <source type="video/ogg" src="@{page.video.srcUrlOgg}">
-                            <source type="video/m3u8" src="@{page.video.srcM3u8}">
+                            @for(source <- page.video.sources) {
+                                <source type="@source.mimeType" src="@source.url">
+                            }
                         </video>
                     }
                     @if(page.video.youtubeId.isDefined && !Option(page.video.posterUrl).getOrElse("").isEmpty){
