--- a/common/app/views/commercial/containers/paidContainer.scala.html
+++ b/common/app/views/commercial/containers/paidContainer.scala.html
@@ -57,17 +57,18 @@
 </div>
 
 @stamp = {
-
-    <a @if(Edition(request).id == "AU") {
-            href="@LinkTo("/guardian-labs-australia")"
-        } else {
-            href="@LinkTo("/guardian-labs")"
+    @defining(
+        Edition(request).id match {
+            case "AU" => "-australia"
+            case "US" => "-us"
+            case _ => ""
         }
-        >
-        @inlineSvg("glabs-logo", "logo")
-        <span class='u-h'>Guardian Labs</span>
-    </a>
-
+    ) { glabsUrlSuffix =>
+        <a href="@LinkTo(s"""/guardian-labs$glabsUrlSuffix""")">
+            @inlineSvg("glabs-logo", "logo")
+            <span class='u-h'>Guardian Labs</span>
+        </a>
+    }
 }
 
 @logoSlot = {
