--- a/commercial/app/views/contentapi/items.scala.html
+++ b/commercial/app/views/contentapi/items.scala.html
@@ -1,5 +1,5 @@
 @import common.commercial.CardContent
-@import common.{Edition, LinkTo}
+@import common.LinkTo
 @import controllers.commercial.{PaidFor, SponsorType, Supported}
 @import fragments.commercial.paidForMeta
 @import views.html.commercial.cards.itemCard
@@ -7,6 +7,8 @@
 @import views.html.fragments.inlineSvg
 @import views.support.commercial.TrackingCodeBuilder.mkCapiCardTrackingCode
 @import cards.{Half, Third, Standard}
+@import views.support.Commercial.glabsLink
+
 @(cards: Seq[CardContent],
   optSection: Option[String],
   optLogo: Option[String],
@@ -69,18 +71,10 @@
 }
 
 @stamp = {
-    @defining(
-        Edition(request).id match {
-            case "AU" => "-australia"
-            case "US" => "-us"
-            case _ => ""
-        }
-    ) { glabsUrlSuffix =>
-        <a href="@LinkTo(s"""/guardian-labs$glabsUrlSuffix""")">
-            @inlineSvg("glabs-logo", "logo")
-            <span class='u-h'>Guardian Labs</span>
-        </a>
-    }
+    <a href="@LinkTo(glabsLink(request))">
+        @inlineSvg("glabs-logo", "logo")
+        <span class='u-h'>Guardian Labs</span>
+    </a>
 }
 
 
