--- a/common/app/views/commercial/containers/paidContainer.scala.html
+++ b/common/app/views/commercial/containers/paidContainer.scala.html
@@ -2,12 +2,13 @@
   containerIndex: Int,
   containerModel: common.commercial.ContainerModel)(implicit request: RequestHeader)
 
-@import common.{Edition, LinkTo}
+@import common.LinkTo
 @import views.html.commercial.containerWrapper
 @import views.html.commercial.containers._
 @import views.html.fragments.commercial.containerLogo
 @import views.html.fragments.inlineSvg
 @import views.support.commercial.TrackingCodeBuilder.mkInteractionTrackingCode
+@import views.support.Commercial.glabsLink
 
 <div data-id="@containerModel.id" class="fc-container">
     @containerWrapper(
@@ -57,18 +58,10 @@
 </div>
 
 @stamp = {
-    @defining(
-        Edition(request).id match {
-            case "AU" => "-australia"
-            case "US" => "-us"
-            case _ => ""
-        }
-    ) { glabsUrlSuffix =>
-        <a href="@LinkTo(s"""/guardian-labs$glabsUrlSuffix""")">
-            @inlineSvg("glabs-logo", "logo")
-            <span class='u-h'>Guardian Labs</span>
-        </a>
-    }
+    <a href="@LinkTo(glabsLink(request))">
+        @inlineSvg("glabs-logo", "logo")
+        <span class='u-h'>Guardian Labs</span>
+    </a>
 }
 
 @logoSlot = {
