--- a/common/app/views/fragments/guBand.scala.html
+++ b/common/app/views/fragments/guBand.scala.html
@@ -1,20 +1,13 @@
 @()(implicit request: RequestHeader)
-@import common.{Edition, LinkTo}
+@import views.support.Commercial.glabsLink
+@import common.LinkTo
 
 <div class="paidfor-band">
     <div class="gs-container paidfor-band__inner">
         @fragments.commercial.paidForMeta()
-        @defining(
-            Edition(request).id match {
-                case "AU" => "-australia"
-                case "US" => "-us"
-                case _ => ""
-            }
-        ) { glabsUrlSuffix =>
-            <a href="@LinkTo(s"""/guardian-labs$glabsUrlSuffix""")">
-                @fragments.inlineSvg("glabs-logo", "logo")
-                <span class='u-h'>Guardian Labs</span>
-            </a>
-        }
+        <a href="@LinkTo(glabsLink(request))">
+            @inlineSvg("glabs-logo", "logo")
+            <span class='u-h'>Guardian Labs</span>
+        </a>
     </div>
 </div>
