get rid of flex styles for onward journeys - and rationalise a little bit

--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -140,7 +140,7 @@
             @page.nextPage.map { nextPage =>
                 @hostedVideoOnward(Some(makeshiftPage(nextPage, page.campaign)))
             }.getOrElse {
-                <div class="js-onward-placeholder hosted__next-page"></div>
+                <div class="js-onward-placeholder hosted__next-page-placeholder"></div>
             }
         </section>
         @guardianHostedCta(page, page.cta)
