--- a/commercial/app/views/hosted/hostedArticleOnward.scala.html
+++ b/commercial/app/views/hosted/hostedArticleOnward.scala.html
@@ -4,7 +4,7 @@
 @if(trails.isEmpty) {
     <div></div>
 } else {
-    <div class="hosted__next-page">
+    <div class="hosted__next-page hosted-article__next-page">
         <div class="hosted__next-page--header">
             <div class="hosted__next-page-header--border hosted-tone-bg"></div>
             <h2 class="hosted__text hosted__next-page--more-from">More from</h2>
