--- a/commercial/app/views/hosted/hostedVideoOnward.scala.html
+++ b/commercial/app/views/hosted/hostedVideoOnward.scala.html
@@ -3,7 +3,7 @@
 
 @maybeTrail.map { trail =>
 
-    <div class="hosted__next-page">
+    <div class="hosted__next-page hosted-video__next-page">
         <div class="hosted__next-page--header">
             <h2 class="hosted__text hosted__next-page--more-from">More from</h2>
             <h2 class="hosted__next-page--client-name hosted-tone">@{trail.campaign.owner}</h2>
