--- a/commercial/app/views/hosted/zootropolisPage.scala.html
+++ b/commercial/app/views/hosted/zootropolisPage.scala.html
@@ -273,7 +273,7 @@
 
                             <div class="hide-on-desktop">
                             @for(nextPage <- page.nextPage) {
-                                <div class="hosted__next-page">
+                                <div class="hosted__next-page hosted-video__next-page">
                                     <div class="hosted__next-page--header">
                                         <h2 class="hosted__text hosted__next-page--more-from">More from</h2>
                                         <h2 class="hosted__next-page--client-name hosted-tone">@{page.campaign.owner}</h2>
@@ -296,7 +296,7 @@
                     </div>
                     <div class="content__secondary-column js-secondary-column">
                     @for(nextPage <- page.nextPage) {
-                        <div class="hosted__next-page">
+                        <div class="hosted__next-page hosted-video__next-page">
                             <div class="hosted__next-page--header">
                                 <h2 class="hosted__text hosted__next-page--more-from">More from</h2>
                                 <h2 class="hosted__next-page--client-name hosted-tone">@{page.campaign.owner}</h2>
