--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -901,7 +901,7 @@ $hosted-video-height: 540px;
 
 .hosted__next-page--header {
     padding-bottom: 10px;
-    margin: $gs-baseline $gs-gutter 10px;
+    margin: $gs-baseline 0 10px;
     border-bottom: 1px solid #eeeeee;
 }
 
@@ -916,10 +916,17 @@ $hosted-video-height: 540px;
 
 .hosted__next-page {
     @include f-headlineSans;
-    @include mq(leftCol) {
-        width: calc(300px + 2 * #{$gs-gutter});
-    }
+}
+
+.hosted-video-page .hosted__next-page-placeholder,
+.hosted-video__next-page {
     order: 3;
+}
+.hosted-video__next-page {
+    @include mq(leftCol) {
+        width: 300px;
+    }
+    margin: 0 $gs-gutter $gs-gutter;
 }
 
 .hosted__next-page--more-from {
@@ -931,30 +938,36 @@ $hosted-video-height: 540px;
     line-height: 20px;
 }
 
+$nextPageThumbHeight: 72px;
+$nextPageThumbHeightMobile: 54px;
+
 .hosted__next-page .hosted__next-page--tile {
-    display: flex;
+    display: block;
     color: #333333;
     border-top: 2px solid;
-    margin: 0 $gs-gutter $gs-gutter;
     text-decoration: none;
     position: relative;
+    min-height: $nextPageThumbHeight;
 
+    @include mq($until: phablet) {
+        min-height: $nextPageThumbHeightMobile;
+    }
     &:active {
         color: #333333;
     }
 }
 
 .hosted__next-page-thumb {
-    height: 72px;
-    width: 120px;
-    align-self: flex-start;
+    height: $nextPageThumbHeight;
+    width: #{$nextPageThumbHeight * 5 / 3};
     object-fit: cover;
-    flex: 0;
     z-index: 1;
+    float: left;
+    margin-right: 6px;
 
     @include mq($until: phablet) {
-        height: 54px;
-        width: 90px;
+        height: $nextPageThumbHeightMobile;
+        width: #{$nextPageThumbHeightMobile * 5 / 3};
     }
 }
 
@@ -964,7 +977,6 @@ $hosted-video-height: 540px;
     padding: 10px;
     margin: 0;
     z-index: 1;
-    flex: 1;
 
     @include mq($until: phablet) {
         font-size: 18px;
