--- a/common/app/views/fragments/atoms/interactive.scala.html
+++ b/common/app/views/fragments/atoms/interactive.scala.html
@@ -1,44 +1,53 @@
 @(interactive: _root_.model.content.InteractiveAtom, shouldFence: Boolean)
 
-@body = {
-    <style>
-        @HtmlFormat.raw(interactive.css)
-    </style>
-    @HtmlFormat.raw(interactive.html)
-}
-
 @iframeBody = {
-    @body
-    <script>
-        function resize() {
-            window.frameElement.height = document.body.offsetHeight;
-        }
+    <!DOCTYPE html>
+    <html>
+        <head>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+            <script>
+                var fonts = [].slice.apply(window.parent.document.styleSheets)
+                    .filter(function (sheet) { return sheet.ownerNode.className.indexOf("webfont") > - 1; })
+                    .map(function (sheet) { return sheet.ownerNode.textContent; })
+                    .join(' ');
+                var css = document.createElement('style');
+                css.textContent = fonts;
+                document.head.appendChild(css);
+            </script>
+            <style>
+                @HtmlFormat.raw(interactive.css)
+            </style>
+        </head>
+        <body>
+            @HtmlFormat.raw(interactive.html)
 
-        var fonts = [].slice.apply(window.parent.document.styleSheets)
-            .filter(function (sheet) { return sheet.ownerNode.className.indexOf("webfont") > - 1; })
-            .map(function (sheet) { return sheet.ownerNode.textContent; })
-            .join(' ');
-        var css = document.createElement('style');
-        css.textContent = fonts;
-        document.head.appendChild(css);
-
-        window.addEventListener('resize', resize);
-        resize();
-    </script>
-    @for(js <- interactive.mainJS) {
-        <script src="https://interactive.guim.co.uk/libs/require.js/2.3.2/require.min.js"></script>
-        <script>
-            require(['@js'], function (interactive) {
-                interactive.boot(document.body);
-            });
-        </script>
-    }
+            @for(js <- interactive.mainJS) {
+                <script src="https://interactive.guim.co.uk/libs/require.js/2.3.2/require.min.js"></script>
+                <script>
+                    require(['@js'], function (interactive) {
+                        interactive.boot(document.body);
+                    });
+                </script>
+            }
+            <script>
+                function resize() {
+                    window.frameElement.height = document.body.offsetHeight;
+                }
+                window.addEventListener('resize', resize);
+                resize();
+            </script>
+        </body>
+    </html>
 }
 
 @if(shouldFence) {
     <iframe class="interactive-atom" srcdoc="@iframeBody.toString"></iframe>
 } else {
     <figure class="interactive interactive-atom" @for(js <- interactive.mainJS) { data-interactive="@js" }>
-        @body
+        <style>
+            @HtmlFormat.raw(interactive.css)
+        </style>
+        @HtmlFormat.raw(interactive.html)
     </figure>
 }
